src/objects/System_Design_Product__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - System Design Products are the individual products (i.e. panels, inverters, etc) to be included in System Design Items.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Alignment__c</fullName>
        <label>Applicable Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Flush</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tilted</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applicable_Mounting_Method__c</fullName>
        <label>Applicable Mounting Method</label>
        <picklist>
            <picklistValues>
                <fullName>Penetrating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clamped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-Beam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballasted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Mount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicable_Roof_Angle__c</fullName>
        <label>Applicable Roof Angle</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applicable_Roof_Materials__c</fullName>
        <label>Applicable Roof Materials</label>
        <picklist>
            <picklistValues>
                <fullName>Asphalt Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Tile - Requires re-roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curved Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightweight Tile - Requires re-roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Corrogated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Seam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rolled Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_Manufacture__c</fullName>
        <label>Country of Manufacture</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC_Optimizer_Efficiency__c</fullName>
        <label>DC Optimizer Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Warranty_Years__c</fullName>
        <label>Default Warranty Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Depth_inches__c</fullName>
        <label>Depth (inches)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Clamp_Type__c</fullName>
        <label>End Clamp Type</label>
        <picklist>
            <picklistValues>
                <fullName>A End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K End Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L End Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L End Clamp Dark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering_Item_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering Item Master</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>System Design Products</relationshipLabel>
        <relationshipName>System_Design_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ground_Mount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ground Mount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Imp__c</fullName>
        <label>Imp</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_CEC_Efficiency__c</fullName>
        <label>Inverter CEC Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Product_Name__c</fullName>
        <formula>IF( 
  RecordType.DeveloperName = &quot;Inverter&quot;
  ,IF(
      AND(
          RIGHT(Make__c,4)=&quot;Edge&quot;
          ,Model__c &lt;&gt; &quot;&quot;
      )
      ,&quot;&quot;
      ,IF(
          RIGHT(Make__c,4)&lt;&gt;&quot;Edge&quot;
          ,Make__c &amp; &quot; &quot; &amp; Description__c
          ,Description__c
       )
   )
   ,&quot;&quot;
)</formula>
        <label>Inverter Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isc__c</fullName>
        <label>Isc</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_inches__c</fullName>
        <label>Length (inches)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_AC_Current__c</fullName>
        <label>Max AC Current</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Current_Output__c</fullName>
        <label>Max Current Output</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_DC_Volt_Rating__c</fullName>
        <label>Max DC Volt Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Inverters_per_String__c</fullName>
        <label>Max Inverters per String</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_OCPD_Rating__c</fullName>
        <label>Max OCPD Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Power_at_40DegC__c</fullName>
        <label>Max Power @ 40 Degrees C</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Voltage__c</fullName>
        <label>Max Voltage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Micro_Inverter__c</fullName>
        <label>Micro Inverter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_Clamp_Type__c</fullName>
        <label>Mid Clamp Type</label>
        <picklist>
            <picklistValues>
                <fullName>A Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K Mid Clamp Dark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L Mid Clamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L Mid Clamp Dark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominal_AC_Voltage__c</fullName>
        <label>Nominal AC Voltage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCPD__c</fullName>
        <label>OCPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTC_Rating_W__c</fullName>
        <label>PTC Rating (W)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pmax__c</fullName>
        <label>Pmax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Output_W__c</fullName>
        <label>Rated Output (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Amps_per_Panel__c</fullName>
        <label>Required Amps per Panel</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sighten_Equipment_uuid__c</fullName>
        <description>Contains the uuid for the equipment in the Sighten system</description>
        <externalId>true</externalId>
        <label>Sighten Equipment uuid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Count</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VOC_Temp_Coeff__c</fullName>
        <label>VOC Temp Coeff</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vmp__c</fullName>
        <label>Vmp</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voc__c</fullName>
        <label>Voc</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wattage__c</fullName>
        <label>Wattage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_lbs__c</fullName>
        <label>Weight (lbs)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width_inches__c</fullName>
        <label>Width (inches)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wire_Type__c</fullName>
        <label>Wire Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>System Design Product</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Rated_Output_W__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inverters</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Rated_Output_W__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Default_Warranty_Years__c</columns>
        <columns>Sighten_Equipment_uuid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Design_Product__c.Inverter</value>
        </filters>
        <label>Inverters</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mounting</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Active__c</columns>
        <columns>Default_method__c</columns>
        <columns>Applicable_Alignment__c</columns>
        <columns>Applicable_Mounting_Method__c</columns>
        <columns>Applicable_Roof_Angle__c</columns>
        <columns>Applicable_Roof_Materials__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Design_Product__c.Mounting</value>
        </filters>
        <label>Mounting</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Panels</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Rated_Output_W__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Sighten_Equipment_uuid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Design_Product__c.Panel</value>
        </filters>
        <label>Panels</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SpecialParts</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Make__c</columns>
        <columns>Model__c</columns>
        <columns>Rated_Output_W__c</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System_Design_Product__c.Special_Part</value>
        </filters>
        <label>Special Parts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SDP-{0}</displayFormat>
        <label>System Design Product Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Design Products</pluralLabel>
    <recordTypes>
        <fullName>Electrical</fullName>
        <active>true</active>
        <label>Electrical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entitlement</fullName>
        <active>true</active>
        <label>Entitlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inverter</fullName>
        <active>true</active>
        <label>Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Labor</fullName>
        <active>true</active>
        <label>Labor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mounting</fullName>
        <active>true</active>
        <label>Mounting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Panel</fullName>
        <active>true</active>
        <label>Panel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Special_Part</fullName>
        <active>true</active>
        <label>Special Part</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trenching</fullName>
        <active>true</active>
        <label>Trenching</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>